--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Instant Keyboard Cat!</string>
+    <string name="mb_settings_title">Settings</string>
+    <string name="pref_maximize_volume_title">Maximize volume</string>
 
 </resources>
